# IntraProcedural-Program-slicing

./: CMakeLists.txt  IntraProceduralSlicing.cpp  README.md  script.sh
test/: O1.ll  a.out  example.c  example.ll  input.c  main.dot  sample.c
